WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
30465
[Qt] QGLauncher leaks WebPage object
https://bugs.webkit.org/show_bug.cgi?id=30465
Summary
[Qt] QGLauncher leaks WebPage object
Antonio Gomes
Reported
2009-10-16 15:10:44 PDT
object is created and never deleted. m_item->setPage(new WebPage());
Attachments
(committed in r49730) patch 0.1 - make it not leak
(2.29 KB, patch)
2009-10-16 15:14 PDT
,
Antonio Gomes
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antonio Gomes
Comment 1
2009-10-16 15:14:38 PDT
Created
attachment 41334
[details]
(committed in
r49730
) patch 0.1 - make it not leak
Kenneth Rohde Christiansen
Comment 2
2009-10-16 15:16:48 PDT
Yes, when a page is created by the app, the app has the ownership and should destroy it. so LGTM, though I do not like the (m_page = new WebPage) part very much, but that is just a nit.
Simon Hausmann
Comment 3
2009-10-16 18:13:23 PDT
Comment on
attachment 41334
[details]
(committed in
r49730
) patch 0.1 - make it not leak You could also make it a child of the mainwindow or the view, to get Qt automatically delete it. But this is okay, too :-)
Antonio Gomes
Comment 4
2009-10-16 20:55:57 PDT
r49730
Antonio Gomes
Comment 5
2009-10-16 20:56:42 PDT
Comment on
attachment 41334
[details]
(committed in
r49730
) patch 0.1 - make it not leak thx simon and kenneth
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug