[Qt] QGLauncher leaks WebPage object https://bugs.webkit.org/show_bug.cgi?id=30465

Patch by Antonio Gomes <tonikitoo@webkit.org> on 2009-10-16
Reviewed by Simon Hausmann.

Make 'SharedScene' to own 'WebPage' reference and delete it at its destructor.

* Api/qwebpage.cpp:
(QWebPage::view):
* Api/qwebpage_p.h:
* QGVLauncher/main.cpp:
(SharedScene::SharedScene):
(SharedScene::~SharedScene):

git-svn-id: svn://svn.chromium.org/blink/trunk@49730 bbb929c8-8fbe-4397-9dbb-9b2b20218538