third_party/WebKit/WebKit/qt/QGVLauncher/main.cpp
@@ -126,9 +126,8 @@ public:
     SharedScene()
     {
         m_scene = new QGraphicsScene;
-
         m_item = new QGraphicsWebView;
-        m_item->setPage(new WebPage());
+        m_item->setPage((m_page = new WebPage));
 
         m_scene->addItem(m_item);
         m_scene->setActiveWindow(m_item);
@@ -138,6 +137,7 @@ public:
     {
         delete m_item;
         delete m_scene;
+        delete m_page;
     }
 
     QGraphicsScene* scene() const { return m_scene; }
@@ -146,6 +146,7 @@ public:
 private:
     QGraphicsScene* m_scene;
     QGraphicsWebView* m_item;
+    WebPage* m_page;
 };
 
 
